Adds some classes to villains

--- a/villains.html
+++ b/villains.html
@@ -8,7 +8,7 @@
 <body>
 	<div>
 		<h1>Villains of Marvel</h1>
-		<ul>
+		<ul class='navBar'>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About Marvel</a></li>
 			<li><a href="heroes.html">Heroes of Marvel</a></li>
@@ -21,7 +21,7 @@
 			<img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
 		</div>
 		<h3>Villains of Marvel</h3>
-		<ul>
+		<ul class='personList'>
 			<li>Alex Wilder: Untrustworthy Genius</li>
 			<li>Bakuto: Long Live the Hand</li>
 			<li>Black Cat: Felicia Hardy</li>
