--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
 		About Marvel
 		<meta charset="UTF-8" />
 	</title>
-	
+	</style>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -14,7 +15,7 @@
 	</h1>
 
 	<h2>History</h2>
-	<div>
+	<div class = "paraText" >
 		<p>
 			Marvel started in 1939 as Timely Publications, and by the early 1950s, had generally become known as Atlas Comics. The Marvel branding began in 1961, the year that the company launched The Fantastic Four and other superhero titles created by Stan Lee, Jack Kirby, Steve Ditko, and many others.
 		</p>
@@ -33,7 +34,7 @@
 	</div>
 
 	<h4>Sources</h4>
-	<div>
+	<div  class = "paraText ">
 		<p>
 			Wiki -
 
