update hereoes with some li tags

--- a/heroes.html
+++ b/heroes.html
@@ -7,17 +7,17 @@
     </head>
     <body>
         <h1>MarvelHeroes</h1>
-        <ul>
+        <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="heroes.html">Heroes</a></li>
             <li><a href="villans.html">Villans</a></li>
         </ul>
-        <ul>
-            ALPHONSO MACKENZIE
-            Hulk
-            ANT-MAN
-            AURAN
+        <ul class="personList">
+            <li>ALPHONSO MACKENZIE</li>
+            <li>Hulk</li>
+            <li>ANT-MAN</li>
+            <li>AURAN</li>
             BEAUTIFUL DREAMER
             BLACK BOLT
             BLACK PANTHER
