finished adding li to each hero

--- a/heroes.html
+++ b/heroes.html
@@ -18,35 +18,35 @@
             <li>Hulk</li>
             <li>ANT-MAN</li>
             <li>AURAN</li>
-            BEAUTIFUL DREAMER
-            BLACK BOLT
-            BLACK PANTHER
-            BLACK WIDOW
-            BLADE
-            BLINK
-            CABLE
-            CAPTAIN AMERICA
-            CAPTAIN MARVEL
-            CHASE STEIN
-            CLOAK
-            COLLEEN WING
-            CRYSTAL
-            DAGGER
-            DAREDEVIL
-            DEADPOOL
-            DEVIL DINOSAUR
-            DOCTOR STRANGE
-            DOMINO
-            DRAX
-            ECLIPSE
-            ELEKTRA
-            FALCON
-            GAMORA
-            GERTRUDE YORKES
-            GHOST RIDER
-            GORGON
-            GROOT
-            GWENPOOL
+            <li>BEAUTIFUL DREAMER</li>
+            <li>BLACK BOLT</li>
+            <li>BLACK PANTHER</li>
+            <li>BLACK WIDOW</li>
+            <li>BLADE</li>
+            <li>BLINK</li>
+            <li>CABLE</li>
+            <li>CAPTAIN AMERICA</li>
+            <li>CAPTAIN MARVEL</li>
+            <li>CHASE STEIN</li>
+            <li>CLOAK</li>
+            <li>COLLEEN WING</li>
+            <li>CRYSTAL</li>
+            <li>DAGGER</li>
+            <li>DAREDEVIL</li>
+            <li>DEADPOOL</li>
+            <li>DEVIL DINOSAUR</li>
+            <li>DOCTOR STRANGE</li>
+            <li>DOMINO</li>
+            <li>DRAX</li>
+            <li>ECLIPSE</li>
+            <li>ELEKTRA</li>
+            <li>FALCON</li>
+            <li>GAMORA</li>
+            <li>GERTRUDE YORKES</li>
+            <li>GHOST RIDER</li>
+            <li>GORGON</li>
+            <li>GROOT</li>
+            <li>GWENPOOL</li>
         </ul>
     </body>
 </html>
