learned how to spell villain

--- a/heroes.html
+++ b/heroes.html
@@ -11,7 +11,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="heroes.html">Heroes</a></li>
-            <li><a href="villans.html">Villans</a></li>
+            <li><a href="villains.html">Villains</a></li>
         </ul>
         <ul class="personList">
             <li>ALPHONSO MACKENZIE</li>
