add navbar styling

--- a/heroes.html
+++ b/heroes.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>MarvelHeroes</h1>
-        <ul class="navbar">
+        <ul class="navBar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="heroes.html">Heroes</a></li>
