--- a/heroes.html
+++ b/heroes.html
@@ -4,15 +4,24 @@
         <title>Marvel Heroes</title>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h1>MarvelHeroes</h1>
-        <ul class="navBar">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="heroes.html">Heroes</a></li>
-            <li><a href="villains.html">Villains</a></li>
-        </ul>
+            <nav class="navbar navbar-inverse">
+                    <div class="container-fluid">
+                      <div class="navbar-header">
+                        <a class="navbar-brand" href="#">Marvel Fan Site</a>
+                      </div>
+                      <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="heroes.html">Heroes</a></li>
+                        <li><a href="villains.html">Villains</a></li>
+                      </ul>
+                    </div>
+                  </nav>
         <ul class="personList">
             <li>ALPHONSO MACKENZIE</li>
             <li>Hulk</li>
