--- a/villains.html
+++ b/villains.html
@@ -5,17 +5,23 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-	<div>
-		<h1>Villains of Marvel</h1>
-		<ul class='navBar'>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Marvel</a></li>
-			<li><a href="heroes.html">Heroes of Marvel</a></li>
-			<li><a href="vilains.html">Villains of Marvel</a></li>
-		</ul>
-	</div>
+	<nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">Villains of Marvel</a>
+			</div>
+			<ul class='nav navbar-nav'>
+				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="about.html">About Marvel</a></li>
+				<li class="nav-item"><a class="nav-link" href="heroes.html">Heroes of Marvel</a></li>
+				<li class="nav-item active"><a class="nav-link" href="villains.html">Villains of Marvel</a></li>
+			</ul>
+		</div>
+	</nav>
 
 	<div>
 		<div id='trimHeader'>
