--- a/villains.html
+++ b/villains.html
@@ -7,13 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="icon" href="https://www.marvel.com/static/images/favicon/favicon-16x16.png" type="image/x-icon">
 </head>
 <body>
 	<nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">Villains of Marvel</a>
-			</div>
+			</div>	
 			<ul class='nav navbar-nav'>
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="about.html">About Marvel</a></li>
@@ -27,54 +28,56 @@
 		<div id='trimHeader'>
 			<img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
 		</div>
-		<h3>Villains of Marvel</h3>
-		<ul class='personList'>
-			<li>Alex Wilder: Untrustworthy Genius</li>
-			<li>Bakuto: Long Live the Hand</li>
-			<li>Black Cat: Felicia Hardy</li>
-			<li>Black Dwarf: Warrior of Mishap</li>
-			<li>Black Mariah: Mariah Dillard</li>
-			<li>Caliban: Psionic Sensor</li>
-			<li>Collector: The Collector</li>
-			<li>Taneleer Tivan: He'll Take It</li>
-			<li>Corvus Glaive: Deadly Tactician</li>
-			<li>Cottonmouth: Cornell Cottonmouth</li>
-			<li>Diamondback: Willis Stryker</li>
-			<li>Doctor Doom: Victor von Doom</li>
-			<li>Dormammu: Dread Him</li>
-			<li>Ebony Maw: Master Manipulator</li>
-			<li>Ego: Living Planet</li>
-			<li>Killmonger: Erik Killmonger</li>
-			<li>Executioner: Skurge</li>
-			<li>Grandmaster: En Dwi Gast</li>
-			<li>Green Goblin: Norman Osborn</li>
-			<li>Harold Meachum: Barbarous Businessman</li>
-			<li>Hela: Goddess of Death</li>
-			<li>Bushmaster: John McIver</li>
-			<li>Kingpin: Wilson Fisk</li>
-			<li>Ulysses Klaue: Ulysses Klaw</li>
-			<li>Loki: Loki Laufeyson</li>
-			<li>Magneto: Max Eisenhardt</li>
-			<li>Nakia: Malice</li>
-			<li>Maximus: Maximus Boltagon</li>
-			<li>Mr. Negative: Martin Li</li>
-			<li>Nebula: Villanous Vanquisher</li>
-			<li>Nightshade: Tilda Johnson</li>
-			<li>Nuke: Frank Simpson</li>
-			<li>Proxima Midnight: Mad Titan's spear</li>
-			<li>Purple Man: Zebediah Killgrave</li>
-			<li>Shades: Focused criminal</li>
-			<li>Shadow King: Mental manipulator</li>
-			<li>Shocker: Herman Schultz</li>
-			<li>Steel Serpent</li>
-			<li>Davos: Vengeful fighter</li>
-			<li>Supergiant: Telepathic takeover</li>
-			<li>Thanos: The Mad Titan</li>
-			<li>Ultron: Creation gone awry</li>
-			<li>Venom: Eddie Brock</li>
-			<li>Vulture: Adrian Toomes</li>
-			<li>Ward Meachum: Ruthless negotiator</li>
-		</ul>
+		<div class="container">
+			<h3>Villains of Marvel</h3>
+			<ul class='personList'>
+				<li>Alex Wilder: Untrustworthy Genius</li>
+				<li>Bakuto: Long Live the Hand</li>
+				<li>Black Cat: Felicia Hardy</li>
+				<li>Black Dwarf: Warrior of Mishap</li>
+				<li>Black Mariah: Mariah Dillard</li>
+				<li>Caliban: Psionic Sensor</li>
+				<li>Collector: The Collector</li>
+				<li>Taneleer Tivan: He'll Take It</li>
+				<li>Corvus Glaive: Deadly Tactician</li>
+				<li>Cottonmouth: Cornell Cottonmouth</li>
+				<li>Diamondback: Willis Stryker</li>
+				<li>Doctor Doom: Victor von Doom</li>
+				<li>Dormammu: Dread Him</li>
+				<li>Ebony Maw: Master Manipulator</li>
+				<li>Ego: Living Planet</li>
+				<li>Killmonger: Erik Killmonger</li>
+				<li>Executioner: Skurge</li>
+				<li>Grandmaster: En Dwi Gast</li>
+				<li>Green Goblin: Norman Osborn</li>
+				<li>Harold Meachum: Barbarous Businessman</li>
+				<li>Hela: Goddess of Death</li>
+				<li>Bushmaster: John McIver</li>
+				<li>Kingpin: Wilson Fisk</li>
+				<li>Ulysses Klaue: Ulysses Klaw</li>
+				<li>Loki: Loki Laufeyson</li>
+				<li>Magneto: Max Eisenhardt</li>
+				<li>Nakia: Malice</li>
+				<li>Maximus: Maximus Boltagon</li>
+				<li>Mr. Negative: Martin Li</li>
+				<li>Nebula: Villanous Vanquisher</li>
+				<li>Nightshade: Tilda Johnson</li>
+				<li>Nuke: Frank Simpson</li>
+				<li>Proxima Midnight: Mad Titan's spear</li>
+				<li>Purple Man: Zebediah Killgrave</li>
+				<li>Shades: Focused criminal</li>
+				<li>Shadow King: Mental manipulator</li>
+				<li>Shocker: Herman Schultz</li>
+				<li>Steel Serpent</li>
+				<li>Davos: Vengeful fighter</li>
+				<li>Supergiant: Telepathic takeover</li>
+				<li>Thanos: The Mad Titan</li>
+				<li>Ultron: Creation gone awry</li>
+				<li>Venom: Eddie Brock</li>
+				<li>Vulture: Adrian Toomes</li>
+				<li>Ward Meachum: Ruthless negotiator</li>
+			</ul>
+		</div>
 	</div>
 
 </body>
