--- a/heroes.html
+++ b/heroes.html
@@ -4,24 +4,29 @@
         <title>Marvel Heroes</title>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
-            <nav class="navbar navbar-inverse">
-                    <div class="container-fluid">
-                      <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Marvel Fan Site</a>
-                      </div>
-                      <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="heroes.html">Heroes</a></li>
-                        <li><a href="villains.html">Villains</a></li>
-                      </ul>
-                    </div>
-                  </nav>
+    <nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">Heroes of Marvel</a>
+            </div>
+            <ul class='nav navbar-nav'>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Marvel</a></li>
+                <li class="nav-item active"><a class="nav-link" href="heroes.html">Heroes of Marvel</a></li>
+                <li class="nav-item"><a class="nav-link" href="villains.html">Villains of Marvel</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div>
+        <div id='trimHeader'>
+                <img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
+        </div>
+        <h3>Heroes of Marvel</h3>
         <ul class="personList">
             <li>ALPHONSO MACKENZIE</li>
             <li>Hulk</li>
@@ -57,5 +62,7 @@
             <li>GROOT</li>
             <li>GWENPOOL</li>
         </ul>
+
+    </div>
     </body>
 </html>
