--- a/heroes.html
+++ b/heroes.html
@@ -26,6 +26,7 @@
         <div id='trimHeader'>
                 <img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
         </div>
+        <div class="container">
         <h3>Heroes of Marvel</h3>
         <ul class="personList">
             <li>ALPHONSO MACKENZIE</li>
@@ -62,7 +63,7 @@
             <li>GROOT</li>
             <li>GWENPOOL</li>
         </ul>
-
+        </div>
     </div>
     </body>
 </html>
