--- a/about.html
+++ b/about.html
@@ -5,27 +5,30 @@
 		About Marvel
 		<meta charset="UTF-8" />
 	</title>
-	</style>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 
-	<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
+	 <nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">Heroes of Marvel</a>
+            </div>
+            <ul class='nav navbar-nav'>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="about.html">About Marvel</a></li>
+                <li class="nav-item "><a class="nav-link" href="heroes.html">Heroes of Marvel</a></li>
+                <li class="nav-item"><a class="nav-link" href="villains.html">Villains of Marvel</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div>
+        <div id='trimHeader'>
+                <img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
+        </div>
 	<h1>
 		About Marvel
 	</h1>
@@ -50,7 +53,7 @@
 	</div>
 
 	<h4>Sources</h4>
-	<div  class = "paraText ">
+	<div >
 		<p>
 			Wiki -
 
