--- a/heroes.html
+++ b/heroes.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link rel="icon" href="https://www.marvel.com/static/images/favicon/favicon-16x16.png" type="image/x-icon">
     </head>
     <body>
     <nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
