--- a/heroes.html
+++ b/heroes.html
@@ -8,6 +8,7 @@
 	    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="icon" href="https://www.marvel.com/static/images/favicon/favicon-16x16.png" type="image/x-icon">
+        <script type="text/javascript" src = "heroes.js"></script>
     </head>
     <body>
     <nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -29,40 +30,8 @@
         </div>
         <div class="container">
         <h3>Heroes of Marvel</h3>
-        <ul class="personList">
-            <li>ALPHONSO MACKENZIE</li>
-            <li>Hulk</li>
-            <li>ANT-MAN</li>
-            <li>AURAN</li>
-            <li>BEAUTIFUL DREAMER</li>
-            <li>BLACK BOLT</li>
-            <li>BLACK PANTHER</li>
-            <li>BLACK WIDOW</li>
-            <li>BLADE</li>
-            <li>BLINK</li>
-            <li>CABLE</li>
-            <li>CAPTAIN AMERICA</li>
-            <li>CAPTAIN MARVEL</li>
-            <li>CHASE STEIN</li>
-            <li>CLOAK</li>
-            <li>COLLEEN WING</li>
-            <li>CRYSTAL</li>
-            <li>DAGGER</li>
-            <li>DAREDEVIL</li>
-            <li>DEADPOOL</li>
-            <li>DEVIL DINOSAUR</li>
-            <li>DOCTOR STRANGE</li>
-            <li>DOMINO</li>
-            <li>DRAX</li>
-            <li>ECLIPSE</li>
-            <li>ELEKTRA</li>
-            <li>FALCON</li>
-            <li>GAMORA</li>
-            <li>GERTRUDE YORKES</li>
-            <li>GHOST RIDER</li>
-            <li>GORGON</li>
-            <li>GROOT</li>
-            <li>GWENPOOL</li>
+        <ul id= displayHeroes class="personList">
+           
         </ul>
         </div>
     </div>
