--- a/character.html
+++ b/character.html
@@ -31,9 +31,10 @@
         </div>
         <div class="container">
             <h3 id="name">Name</h3>
+            <h1 id="fullName">Full Name</h1>
             <img id="#" alt="Person" />
-            <h4>Appearence</h4>
-            <p id="appearence"></p>
+            <h4>Appearance</h4>
+            <p id="appearance"></p>
             <h4>PowerStats</h4>
             <p id="powerStats"></p>
             <h4>Biography</h4>
@@ -45,5 +46,5 @@
         </div>
     </div>
 </body>
-
+<script src="js/character.js"></script>
 </html>
